--- a/package.json
+++ b/package.json
@@ -2,13 +2,27 @@
   "name": "moviedbapp",
   "version": "1.0.0",
   "description": "This is my first node project",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "node app.js dev port=3000",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/anandchavan24/MovieDbApp.git"
+  },
+  "dependencies": {
+    "axios": "^1.1.2",
+    "cors": "^2.8.5",
+    "express": "^4.18.1",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.6.4",
+    "mysql2": "^2.3.3"
+  },
+  "devDependencies": {
+    "@faker-js/faker": "^7.5.0",
+    "jest": "^29.1.2",
+    "uuid": "^9.0.0"
   },
   "author": "",
   "license": "ISC",
