--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "app.js",
   "scripts": {
     "dev": "node app.js dev port=3000",
-    "test": "jest"
+    "test": "jest",
+    "swagger-autogen": "node swagger/swagger.js dev port=3000"
   },
   "repository": {
     "type": "git",
@@ -17,11 +18,14 @@
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.6.4",
-    "mysql2": "^2.3.3"
+    "mysql2": "^2.3.3",
+    "swagger-jsdoc": "^6.2.5",
+    "swagger-ui-express": "^4.5.0"
   },
   "devDependencies": {
     "@faker-js/faker": "^7.5.0",
     "jest": "^29.1.2",
+    "swagger-autogen": "^2.22.0",
     "uuid": "^9.0.0"
   },
   "author": "",
